<resources>
    <string name="app_name">Audio Steganography</string>

    <string name="title_home">Text Message Security Using MLSB Method and RLE Algorithm on Audio Files </string>
    <string name="audio_file_selected">Audio file has been selected.</string>
    <string name="message_file_selected">Message file has been selected.</string>
    <string name="random_number_generated">Random number has been generated.</string>
    <string name="description_fasilkom_logo">fasilkom_ti_logo</string>
    <string name="key_file_selected">Key file has been selected.</string>
    <string name="embed_process_finished">Process has been finished.\nMSE: %f\nPSNR: %f\nRunning Time: %f seconds</string>
    <string name="extraction_process_finished">Process has been finished.\nRunning Time: %f seconds</string>
    <string name="compress_process_finished">Process has been finished.\nCR: %f\nSS: %f\nBitrate: %f\nRunning Time: %f seconds</string>
    <string name="get_file_size_to_mb">Original audio, file size: %f MB</string>
    <string name="get_file_size_to_mb1">Modified audio, file size: %f MB</string>
    <string name="compare_file_modified">File is modified</string>
    <string name="compare_file_original">File is original</string>
    <string name="decompress_process_finished">Process has been finished.\nRunning Time: %f </string>
    <string name="read_audio_success">Success read audio file.</string>
    <string name="read_message_success">Success read message file.</string>
    <string name="input_message_warning">Please input message first.</string>
    <string name="input_audio_warning">Please input audio file first.</string>
    <string name="input_seed_warning">Please input seed value of Multiply With Carry Generator.</string>
    <string name="input_message_audio_warning">Please input message and audio file first.</string>
    <string name="permission_denied_warning">Permission denied. Please allow permission to continue.</string>
    <string name="success_save_file">Process is successful.</string>
    <string name="failed_save_file">Sorry failed to save result file.\n</string>
    <string name="process_failed_warning">Sorry, process is getting error. Please try again.</string>
    <string name="read_key_success">Success read key file.</string>
    <string name="input_key_warning">Please input key file first.</string>
    <string name="file">File:</string>
    <string name="file_original">Original File:</string>
    <string name="file_modified">Modified File:</string>
    <string name="select_file">Select File</string>
    <string name="select_file_1">Select Audio File 1</string>
    <string name="select_file_2">Select Audio File 2</string>
    <string name="compare">Compare</string>
    <string name="compress_file">Compress File</string>
    <string name="process_status">Process Status:</string>
    <string name="decompress_file">Decompress File</string>
    <string name="select_audio">Select Audio</string>
    <string name="message">Message:</string>
    <string name="select_message">Select Message</string>
    <string name="multiply_with_carry_generator">Multiply with Carry Generator</string>
    <string name="mwc_a">a</string>
    <string name="mwc_b">b</string>
    <string name="mwc_c0">C0</string>
    <string name="mwc_x0">X0</string>
    <string name="random_key">Random Key</string>
    <string name="embed_data">Embed Data</string>
    <string name="key">Key:</string>
    <string name="select_key">Select Key</string>
    <string name="extract_message">Extract Message</string>
    <string name="uri_null">You didn\'t select anything.</string>
    <string name="failed_read_key">Failed to read key.</string>
    <string name="embeding">Embedding</string>
    <string name="extraction">Extraction</string>
    <string name="compression">Compression</string>
    <string name="decompression">Decompression</string>
    <string name="comparefiles">Compare Audio Files</string>
    <string name="changeLang_alb">Alb</string>
    <string name="changeLAng_Eng">Eng</string>
</resources>
