<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_dimen"
    tools:context=".ui.CompareFragment">

    <TextView
        android:id="@+id/tv_file_1"
        style="@style/Widget.Custom.Title.TextView"
        android:layout_width="114dp"
        android:layout_height="22dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/file_original"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_filePath"
        android:layout_width="174dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_file_audio_1"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/tv_file_1"
        app:layout_constraintTop_toTopOf="@+id/tv_file_1"
        tools:text="File Path" />

    <TextView
        android:id="@+id/tv_file_2"
        style="@style/Widget.Custom.Title.TextView"
        android:layout_width="109dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:text="@string/file_modified"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_filePath_2"
        android:layout_width="174dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_file_audio_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_file_2"
        app:layout_constraintTop_toTopOf="@+id/tv_file_2"
        tools:text="File Path 1" />


    <Button
        android:id="@+id/btn_select_file_audio_1"
        style="@style/Widget.Custom.Button"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="60dp"
        android:text="@string/select_file_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filePath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_filePath"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btn_select_file_audio_2"
        style="@style/Widget.Custom.Button"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="60dp"
        android:text="@string/select_file_2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_filePath_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_filePath_2"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/btn_compare"
        style="@style/Widget.Custom.Button"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="60dp"
        android:text="@string/compare"
        app:layout_constraintBottom_toBottomOf="@+id/tv_process"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/tv_process"
        style="@style/Widget.Custom.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_dimen"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/process_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_compare" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_dimen"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_process"
        tools:text="Status for original audio file" />

    <TextView
        android:id="@+id/tv_status1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_dimen"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_process"
        tools:text="Status for modifify audio file" />

    <TextView
        android:id="@+id/tv_status2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_dimen"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_process"
        tools:text="File is original or modified" />


</androidx.constraintlayout.widget.ConstraintLayout>